Feat: Melhoria na lógica de gerenciar cursos e disciplinas